# media-rs

./: .gitignore  SETUP.md  pubspec.yaml  run_linux_wsl.sh  setup_all.bat  setup_all.sh  setup_deps.sh
example/: .gitignore  distribute_options.yaml  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/mediars/example/: MainActivity.kt
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: frb_media_screen.dart  main.dart  media_screen.dart
example/lib/image/: image_lab_screen.dart  image_lab_view_model.dart  image_labs_widget.dart
example/lib/utils/: file_utils.dart
example/lib/video/: video_lab_screen.dart  video_lab_view_model.dart  video_lab_widgets.dart  video_player_screen.dart
example/linux/: CMakeLists.txt
example/linux/packaging/deb/: make_config.yaml
example/macos/Flutter/: Flutter-Release.xcconfig  GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/packaging/exe/: make_config.yaml
media/: native_bindings.h  pubspec.yaml
media/hook/: build.dart  build_environment.dart
media/lib/: media.dart
media/lib/src/: frb_media_service.dart  media_service.dart
media/lib/src/bindings/: ffi.g.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
media/lib/src/bindings/api/: logger.dart  media.dart  media.freezed.dart
media/tool/: ffigen.dart
native/: Cargo.toml  README.md  bindings.h  build.rs  cargo-wrapper.sh  flutter_rust_bridge.yaml  frb_bindings.h  generate-bindings.sh  image.HEIC  rust-toolchain.toml  setup_env.bat  setup_env.sh
native/.cargo/: config.toml
native/src/: c_api.rs  frb_generated.rs  lib.rs  mingw_stub.c
native/src/api/: ffmpeg_process.rs  logger.rs  media.rs  media_test.rs  mod.rs  video.rs
scripts/: README_ANDROID.md  build.sh  cleanup_openh264.sh  setup_ffmpeg.sh  setup_ffmpeg_android.sh  setup_ffmpeg_ios.sh  setup_libheif.sh  setup_libheif_all.sh  setup_openh264.sh  setup_openh264_android.sh
scripts/deprecated/: README.md  README_ANDROID.md  README_FFMPEG_REBUILD.md  build_mac.sh  clean_rlib.sh  clean_rlib_immediate.sh  fix_ffmpeg_arch.sh  run_tests.sh  setup_openh264.sh
scripts/support/: .keep  build_libheif_msvc.bat  build_openh264_msvc.bat  clean_rlib_openh264.py  convert_mingw_to_msvc.bat  convert_to_msvc_lib.bat  install_llvm_windows.bat  monitor_and_build.bat  rebuild_libheif_windows.bat  setup_ffmpeg.sh  setup_ffmpeg_android.sh  setup_ffmpeg_ios.sh  setup_ffmpeg_linux.sh  setup_ffmpeg_windows.sh  setup_libheif_all.sh  setup_libheif_linux.sh  setup_libheif_windows.sh  setup_libheif_windows_msvc.bat  setup_openh264_android.sh  setup_openh264_linux.sh  setup_openh264_windows.sh  verify_ffmpeg_license.sh
tool/: build.dart  setup.dart
tool/setup/build_systems/: build_system.dart
tool/setup/builders/: ffmpeg_builder.dart  libheif_builder.dart  openh264_builder.dart
tool/setup/utils/: file_ops.dart  git.dart
tool/src/builders/: base_builder.dart  ffmpeg_builder.dart  libheif_builder.dart
tool/src/utils/: download.dart  process.dart
