[package]
name = "media"
version = "0.0.1+1"
edition = "2021"

[lib]
name = "media"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
ffmpeg-next = { version = "8", default-features = false, features = [
    "codec",
    "format",
    "software-scaling",
    "software-resampling",
    "static",
] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25" }
libheif-rs = { version = "2.5", features = ["image"] }
# Use pkg-config to find our pre-built libheif (remove embedded-libheif feature)
libheif-sys = { version = "5.0" }

[patch.crates-io]
ffmpeg-sys-next = { path = "../third_party/rust-ffmpeg-sys" }
